# AS120

./: .gitignore
firmware-s3/: CMakeLists.txt  deploy.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.sim
firmware-s3/components/lua/: CMakeLists.txt
firmware-s3/main/: CMakeLists.txt  Kconfig.projbuild  as120.c  as120.h  ble_server.c  ble_server.h  blobs.c  blobs.h  constants.h  http_server.c  http_server.h  luavm.c  luavm.h  main.c  rgb_led.c  rgb_led.h  stepper.c  stepper.h  wifi.c  wifi.h
firmware-s3/main/drivers/: dac7574.c  dac7574.h  i2c_util.c  i2c_util.h  tca9535.c  tca9535.h
firmware-s3/spiffs/: index.html
panel/: deploy.sh  index.html  package-lock.json  package.json  vite.config.ts
panel/src/: App.tsx  index.css
panel/src/components/: AutosamplerView.tsx  BleSetupWizard.tsx  CommLog.tsx  ConnectionBar.tsx  DebugConsole.tsx  MotionQueue.tsx  MotorCard.tsx  PanelUpdater.tsx  SystemInfo.tsx  TopologyView.tsx  WiFiConfig.tsx
panel/src/components/ui/: slider.tsx
panel/src/hooks/: useAS120.ts
panel/src/transport/: ble.ts  context.tsx  debug.ts  http.ts  types.ts
scripts/: movement_demo.py
